@@ -1,0 +1,7 @@
+[
+  {
+    "action": "close",
+    "author": "adam j hartz <hz@mit.edu>",
+    "id": "181-1565724426458-bce8deddd3f729e1cd15e1929e9177f9"
+  }
+]
